added functionality to get character list
