# api-docs.json
@@ -90,7 +90,140 @@
       }
     }
   },
+  "/characters/{movieId}?sortBy={name}&order={asc}&gender={female}": {
+    "get": {
+      "tags": ["characters"],
+      "description": "Fetches All character for a movie based on specified parameters",
+      "parameters": [{
+        "name": "movieId",
+        "in": "path",
+        "required": true,
+        "type": "integer",
+        "description": "Movie ID"
+      },
+      {
+        "name": "sortBy",
+        "in": "query",
+        "type": "string",
+        "required": false,
+        "description": "To sort characters by one of name, gender or height"
+      },
+        {
+          "name": "order",
+          "in": "query",
+          "type": "string",
+          "required": false,
+          "description": "To order characters in ascending or descending order"
+        },
+        {
+          "name": "gender",
+          "in": "query",
+          "type": "string",
+          "required": false,
+          "description": "specifies the filter parameter. male or female"
+        }],
+        "responses": {
+          "200": {
+            "description": "Successfully fetched and manipulated character API from Swapi endpoint",
+            "schema": {
+              "$ref": "#definitions/characterResponseOk"
+            }
+          }
+        }
+      }
+    },
   "definitions": {
+    "characterResponseOk": {
+      "properties": {
+        "status": {
+          "type": "boolean",
+          "example": true
+        },
+        "message": {
+          "type": "string",
+          "example": "characters retrieved"
+        },
+        "data": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "example": "Adi Gallia"
+              },
+              "height": {
+                "type": "string",
+                "example": "184"
+              },
+              "mass": {
+                "type": "string",
+                "example": "50"
+              },
+              "hair_oolor": {
+                "type": "string",
+                "example": "none"
+              },
+              "skin_color": {
+                "type": "string",
+                "example": "dark"
+              },
+              "eye_color": {
+                "type": "string",
+                "example": "blue"
+              },
+              "birth_year": {
+                "type": "string",
+                "example": "unknown"
+              },
+              "gender": {
+                "type": "string",
+                "example": "female"
+              },
+              "homeworld": {
+                "type": "string",
+                "example": "https://swapi.co/api/planets/9/"
+              },
+              "films": {
+                "type": "array",
+                "example": [
+                  "https://swapi.co/api/films/4/",
+                  "https://swapi.co/api/films/6/"
+                ]
+              },
+              "species": {
+                "type": "array",
+                "example": [
+                  "https://swapi.co/api/species/23/"
+                ]
+              },
+              "vehicles": {
+                "type": "array",
+                "example": [
+                ]
+              },
+              "starships": {
+                "type": "array",
+                "example": [
+                ]
+              },
+              "created": {
+                "type": "string",
+                "example": "2014-12-20T10:29:11.661000Z"
+              },
+              "edited": {
+                "type": "string",
+                "example": "2014-12-20T21:17:50.432000Z"
+              },
+              "url": {
+                "type": "string",
+                "example": "https://swapi.co/api/people/55/"
+              }
+            }
+          }
+        }
+      }
+    },
     "films": {
       "type": "object",
       "properties": {
